# terminal-stickers

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  sticker_pack.yml
.github/workflows/: ci.yml  release.yml
packs/starter/: sticker-pack.toml
packs/starter/stickers/: laugh.ppm
src/: animation.rs  cli.rs  lib.rs  main.rs  manifest.rs  packs.rs  paths.rs  render.rs  tui.rs
