[package]
name = "terminal-stickers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A WhatsApp-style sticker experience for terminal chat UIs"
repository = "https://github.com/danielvictorino/terminal-stickers"
readme = "README.md"
keywords = ["terminal", "stickers", "tui", "sixel", "kitty"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
directories = "6.0"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "pnm", "webp"] }
ratatui = "0.29"
ratatui-image = "10.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-width = "0.2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
